--- a/multinodal_lawnbot/package.xml
+++ b/multinodal_lawnbot/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>cam_robot</name>
+  <name>multinodal_lawnbot</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="ayan48508@gmail.com">ubuntu</maintainer>
-  <license>Apache-2.0</license>
+  <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
